syntax = "proto3";

option csharp_namespace = "CovertCode.Services.Secret.Api";

package Secret;

service SecretManager {
  rpc Add (AddRequest) returns (AddResponse);
  rpc GetByAccessPhrase (GetByAccessPhraseRequest) returns (GetByAccessPhraseResponse);
}

message AddRequest {
  string value = 1;
  int32 ttl = 2;
  string passPhrase = 3;
}

message AddResponse {
  bool wasSuccessful = 1;
  int32 secretID = 2;
  string accessPhrase = 3;
}


message GetByAccessPhraseRequest {
  string accessPhrase = 1;
}

message GetByAccessPhraseResponse {
  bool wasSuccessful = 1;
  string value = 2;
}